@@ -225,6 +225,7 @@ extern "C" {
 #include "eina_cpu.h"
 #include "eina_sched.h"
 #include "eina_tiler.h"
+#include "eina_thread.h"
 #include "eina_hamster.h"
 #include "eina_matrixsparse.h"
 #include "eina_str.h"
