@@ -157,6 +157,7 @@ EAPI Eina_Inlist *_eina_tracking = NULL;
    S(prefix);
    S(value);
    S(tmpstr);
+   S(thread);
 /* no model for now
    S(model);
  */
@@ -198,6 +199,7 @@ static const struct eina_desc_setup _eina_desc_setup[] = {
    S(prefix),
    S(value),
    S(tmpstr),
+   S(thread)
 /* no model for now
    S(model)
  */
